[package]
name = "bevy_llm"
description = "bevy llm plugin (native + wasm)"
version = "0.2.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "bevy",
  "asset",
]
categories = []
homepage = "https://github.com/mosure/bevy_llm"
repository = "https://github.com/mosure/bevy_llm"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]



[features]
default = []


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
flume = "0.11"
futures-lite = "2.3"
llm = "1.3.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3.1", features = ["json"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_render",
  "bevy_winit",
  "serialize",
  "x11",
]


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'ReadableStream',
  'ReadableStreamDefaultReader',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }
pretty_assertions = "1.4"
tempfile = "3.19"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

[dev-dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_input_focus",
  "bevy_log",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "png",
  "webgl2",
  "tonemapping_luts",
  "x11",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"


[[example]]
name = "chat"
path = "example/chat.rs"


[[example]]
name = "tool"
path = "example/tool.rs"
